[package]
name = "booksearch"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
ratatui-image = { version = "10", default-features = false, features = ["crossterm"] }
image = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
rbook = "0.7"
magic-wormhole = { version = "0.8", default-features = false, features = ["transfer", "transit", "tls"] }
smol = "2"
async-channel = "2"
futures = "0.3"

[profile.release]
lto = true
